crates/pardosa-schema/tests/compile_pass/valid_bounded.rs
use pardosa_schema::{EventString, GenomeSafe};
#[derive(GenomeSafe)]
struct Good {
    msg: EventString<256>,
}
fn main() {}
